loco-gen/src/snapshots/loco_gen__template_engine__tests__can_render_form_field_[form_array_string].snap
---
source: loco-gen/src/template_engine.rs
expression: "format!(\"Crete form\\n\\r{create_form}\\n\\rEdit Form\\n\\r{edit_form}\")"
---
Crete form
<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">array</label>
    <button type="button" class="text-xs py-1 px-3 rounded-lg bg-gray-900 text-white add-more" data-group="array">Add More</button>
    <div id="array-inputs" class="space-y-2">
    {% if item.array %}
        {% for val in item.array %}
            <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" name="array" type="text" value="{{val}}"  custom_type="array"/>
        {% endfor -%}
    {%- else -%}
        <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" name="array" type="text" value=""  custom_type="array"/>
    {%- endif -%}
    </div>
</div>
Edit Form
<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">array</label>
    <button type="button" class="text-xs py-1 px-3 rounded-lg bg-gray-900 text-white add-more" data-group="array">Add More</button>
    <div id="array-inputs" class="space-y-2">
    {% if item.array %}
        {% for val in item.array %}
            <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" name="array" type="text" value="{{val}}"  custom_type="array"/>
        {% endfor -%}
    {%- else -%}
        <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" name="array" type="text" value="{{item.array}}"  custom_type="array"/>
    {%- endif -%}
    </div>
</div>
