loco-gen/src/snapshots/loco_gen__template_engine__tests__can_render_form_field_[form_binary_len!_binary_len!].snap
---
source: loco-gen/src/template_engine.rs
expression: "format!(\"Crete form\\n\\r{create_form}\\n\\rEdit Form\\n\\r{edit_form}\")"
---
Crete form
<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">binary_len!</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" id="binary_len!" name="binary_len!" value="" custom_type="blob" pattern="^[0-9]+(,[0-9]+)*$" required />
    <p id=":rh:-form-item-description" class="text-[0.8rem] text-muted-foreground">e.g: 123,123,123 .</p>
</div>
Edit Form
<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">binary_len!</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" id="binary_len!" name="binary_len!" value="{{item.binary_len!}}" custom_type="blob" pattern="^[0-9]+(,[0-9]+)*$" required />
    <p id=":rh:-form-item-description" class="text-[0.8rem] text-muted-foreground">e.g: 123,123,123 .</p>
</div>
